# config/routes.rb
@@ -40,6 +40,7 @@ Rails.application.routes.draw do
       get "models/:model_id/download", to: "downloads#show", as: :model_download
       get "files/:token", to: "files#show", as: :file
       get "certificates/:cert_id", to: "certificates#show", as: :certificate
+      get "licenses/:id/can", to: "licenses#can", as: :license_permission
       get "sandbox/topics/:topic_id/messages/:sequence_number", to: "sandbox#message",
           as: :sandbox_message
       get "sandbox/files/:cert_id", to: "sandbox#file", as: :sandbox_file
